src/test/deca/context/valid/tests_print.deca
// Description:
//    différents cas de print valides
//
// Resultats:
//    aucune erreur
//
// Historique:
//    cree le 08/01/2023

{
    println("ok");
//    print(1.0);
//    print("Hi GL24");
}
