src/test/deca/context/invalid/cas_printlnInvalid.deca
// Description:
//    condition valide
//
// Resultats:
//    aucune erreur
//
// Historique:
//    cree le 08/01/2023

{
    print(true);
}
